# RAT

./: .gitignore  LICENSE  example.html  index  nx.html  pyproject.toml  test.py  test2.py
notebooks/: test.ipynb
src/models/: GCN.py  MLP.py  RAT.py
src/rolx/: __init__.py
src/rolx/features/: extract.py  prune.py
src/rolx/graph/: graph.py
src/rolx/graph/interface/: __init__.py  base.py  igraph.py  networkx.py
src/rolx/roles/: description_length.py  extract.py  factor.py
src/utils/visualization/: visualization.py
