[tool.poetry]
name = "structuralembedding"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.3"
igraph = "^0.11.5"
numpy = "^1.24.2"
pandas = "^1.5.3"
pyvis = "^0.3.2"
install = "^1.3.5"
jupyterlab = "^4.2.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
torch-geometric = "^2.5.3"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
